Marco's comments included
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6320 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/elastic/elastic.tex
+++ b/2012/3papers/elastic/elastic.tex
@@ -103,7 +103,7 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \inst{7b}{Universit\`{a} degli Studi di Siena and Gruppo Collegato INFN di Siena, Italy.}\\
 \inst{8} {CERN, Geneva, Switzerland.}\\
 \inst{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}\\
-\inst{10}{Penn State University, Dept. of Physics, University Park, PA, USA.}\\
+\inst{10}{Penn State University, Dept.~of Physics, University Park, PA, USA.}\\
 }
 
 
@@ -111,7 +111,7 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 
 
 \abstract{%
-At the LHC energy of $\sqrt s = 7\un{TeV}$, under various beam and background conditions, luminosities, and Roman Pot positions, TOTEM has measured the differential cross-section for proton-proton elastic scattering as a function of the four-momentum transfer squared $t$. The results of the different analyses are in excellent agreement demonstrating no sizeable dependence on the beam conditions. Due to the very close approach of the Roman Pot detectors to the beam center ($\approx 5\sigma_{\rm beam}$) in a dedicated run with $\beta^*=90\un{m}$, $|t|$-values down to $5\cdot10^{-3}\un{GeV^2}$ were reached. The exponential slope of the differential elastic cross-section in this newly explored $|t|$-region stayed unchanged and hence an exponential fit with only one constant $B = (19.9 \pm 0.3)\un{GeV^{-2}}$ over the large $|t|$-range from $0.005$ to $0.2\un{GeV^2}$ describes the differential distribution well. The high precision of the measurement and the large lever arm lead to an error on the slope parameter $B$ which is remarkably small compared to previous experiments. It allows a precise extrapolation over the non-visible cross-section (only  $9\%$) to $t=0$. With the luminosity from CMS, the elastic cross-section was determined to be $(25.4 \pm 1.1)\un{mb}$, and using in addition the optical theorem, the total $\rm pp$ cross-section was derived to be $(98.6 \pm 2.2)\un{mb}$.
+At the LHC energy of $\sqrt s = 7\un{TeV}$, under various beam and background conditions, luminosities, and Roman Pot positions, TOTEM has measured the differential cross-section for proton-proton elastic scattering as a function of the four-momentum transfer squared $t$. The results of the different analyses are in excellent agreement demonstrating no sizeable dependence on the beam conditions. Due to the very close approach of the Roman Pot detectors to the beam center ($\approx 5\sigma_{\rm beam}$) in a dedicated run with $\beta^*=90\un{m}$, $|t|$-values down to $5\cdot10^{-3}\un{GeV^2}$ were reached. The exponential slope of the differential elastic cross-section in this newly explored $|t|$-region remained unchanged and thus an exponential fit with only one constant $B = (19.9 \pm 0.3)\un{GeV^{-2}}$ over the large $|t|$-range from $0.005$ to $0.2\un{GeV^2}$ describes the differential distribution well. The high precision of the measurement and the large fit range lead to an error on the slope parameter $B$ which is remarkably small compared to previous experiments. It allows a precise extrapolation over the non-visible cross-section (only  $9\%$) to $t=0$. With the luminosity from CMS, the elastic cross-section was determined to be $(25.4 \pm 1.1)\un{mb}$, and using in addition the optical theorem, the total $\rm pp$ cross-section was derived to be $(98.6 \pm 2.2)\un{mb}$.
 %
 For model comparisons the $t$-distributions are tabulated including the large $|t|$-range of the previous measurement \cite{epl95}.
 }
@@ -139,13 +139,13 @@ For model comparisons the $t$-distributions are tabulated including the large $|
 The study of elastic proton-proton scattering reveals many aspects about the structure of the proton, its shape and opacity, i.e.~matter density. It also tests the interplay of non-perturbative and perturbative regimes of $\rm pp$ interactions depending on the four-momentum transfer squared $t$ involved in the scattering process.
 % ($t = (p_{\rm i} - p_{\rm f})^2$ with $p_{\rm i,f}$  being the initial and final four-momentum, respectively). 
 
-In several runs with different beam optics, TOTEM has measured at the center-of-mass energy of $7\un{TeV}$ the differential elastic cross-section $\d\sigma/\d t$ over a wide range of $t$. The first measurement, reported by the TOTEM collaboration \cite{epl95}, extended over the $|t|$-range from $0.36 \hbox{ to } 2.5\un{GeV^2}$. These data were taken with the standard 2010 LHC beam optics (with the betatron value at the intersection point $\beta^*$ of $3.5\un{m}$). The differential cross-section $\d\sigma/\d t$ exhibited an exponential decay at low $|t|$ followed by a significant diffractive minimum at $|t|=0.58\un{GeV^2}$ and at larger $|t|$-values a behavior compatible with the power law already observed at lower energies (see references 1 to 11 in \cite{epl95}).
+In several runs with different beam optics, TOTEM has measured at the center-of-mass energy of $7\un{TeV}$ the differential elastic cross-section $\d\sigma/\d t$ over a wide range of $t$. The first measurement, reported by the TOTEM collaboration \cite{epl95}, covered the $|t|$-range from $0.36 \hbox{ to } 2.5\un{GeV^2}$. These data were taken with the standard 2010 LHC beam optics (with the betatron value at the intersection point $\beta^*$ of $3.5\un{m}$). The differential cross-section $\d\sigma/\d t$ exhibited an exponential decay at low $|t|$ followed by a significant diffractive minimum at $|t|=0.58\un{GeV^2}$ and at larger $|t|$-values a behavior compatible with the power law already observed at lower energies (see references 1 to 11 in \cite{epl95}).
 
 To access smaller $|t|$-values (at $\sqrt s = 7\un{TeV}$ $|t| = 0.01\un{GeV^2}$ corresponds to a scattering angle of $\approx 29\un{\mu rad}$) the colliding beams must have a beam divergence of a few micro-radians. This can be obtained by either increasing the betatron value $\beta^*$ or by reducing the beam emittance $\epsilon$ (beam divergence $=\sqrt{\epsilon/\beta^*}$). With a dedicated beam optics configuration ($\beta^* = 90\un{m}$), TOTEM extended the measurement to $|t|$-values as low as $2\cdot10^{-2}\un{GeV^2}$ \cite{epl96}. This made the extrapolation of the differential cross-section to the optical point at $t=0$ possible and enabled, for the first time at the LHC, the determination of the elastic scattering cross-section as well as the total cross-section via the optical theorem.
 
-In this paper, we concentrate on an improved $t$-distribution measurement with higher statistics and reaching even smaller $|t|$-values using different data sets taken in October 2011, with several special runs at $\beta^* = 90\un{m}$. This time, the detectors, housed in Roman Pots (RP), were put very close to the beam center: $4.8 \hbox{ to } 6.5$ times the transverse beam size $\sigma_{\rm beam}$. This was possible since in this run the beams were scraped by the LHC collimators at a distance of $4\,\sigma_{\rm beam}$ for RP alignment purposes. For the definition of their position, each Roman Pot had to touch this sharp beam edge. After retraction by $0.5$ to $2\,\sigma_{\rm beam}$, TOTEM took data in very clean conditions with only a few colliding bunch pairs and reached $|t|$ values down to $5\cdot10^{-3}\un{GeV^2}$, enabling the observation of $91\%$ of the elastic cross-section -- compared to only $67\%$ previously \cite{epl96}. By extrapolating the differential elastic cross-section to the optical point $t=0$ and using the optical theorem, the total and inelastic cross-sections were also derived. The differential cross-section over the complete $t$-range combining all available measurements with its statistical and systematic uncertainties is tabulated in this article.
+This article presents an improved $t$-distribution measurement with higher statistics and reaching even smaller $|t|$-values using different data sets taken in October 2011, with several special runs at $\beta^* = 90\un{m}$. This time, the detectors, housed in Roman Pots (RP), were put very close to the beam center: $4.8 \hbox{ to } 6.5$ times the transverse beam size $\sigma_{\rm beam}$. This was possible since the beams were scraped by the LHC collimators at a distance of $4\,\sigma_{\rm beam}$ for RP alignment purposes. For the definition of their position, each Roman Pot was brought to touch this sharp beam edge. After retraction by $0.5$ to $2\,\sigma_{\rm beam}$, TOTEM took data in very clean conditions with only a few colliding bunch pairs and reached $|t|$ values down to $5\cdot10^{-3}\un{GeV^2}$, enabling the observation of $91\%$ of the elastic cross-section -- compared to only $67\%$ previously \cite{epl96}. By extrapolating the differential elastic cross-section to the optical point $t=0$ and using the optical theorem, the total and inelastic cross-sections were also derived. The differential cross-section over the complete $t$-range combining all available measurements with its statistical and systematic uncertainties is tabulated in this article.
 
-In the same journal issue, a direct inelastic cross-section measurement, based on triggers from the forward inelastic detectors, is reported \cite{P2}. This is compared to the inelastic cross-section obtained from elastic scattering via the optical theorem, yielding a cross-section estimate for single diffraction at masses below $3\un{GeV}$ that escape our detection. Another report \cite{P3} summarizes the cross-sections obtained with different approaches, including the luminosity independent method. Since the $\rho$ parameter (the ratio of the real to imaginary part of the hadronic scattering amplitude at $t=0$) does not enter in the method from Ref.~\cite{P2}, $\rho$ can be determined by comparing the results from the different methods. Furthermore, the luminosity of the LHC was extracted, confirming the more detector-dependent estimates by CMS. 
+In the same journal issue, a direct inelastic cross-section measurement, based on triggers from the forward inelastic detectors, is reported \cite{P2}. This is compared to the inelastic cross-section obtained from elastic scattering via the optical theorem, yielding a cross-section estimate for single diffraction at masses below $3\un{GeV}$ that escape our detection. Another article \cite{P3} summarizes the cross-sections obtained with different approaches, including the luminosity independent method. Since the $\rho$ parameter (the ratio of the real to imaginary part of the hadronic scattering amplitude at $t=0$) does not enter in the method from Ref.~\cite{P2}, $\rho$ can be determined by comparing the results from the different methods. Furthermore, the luminosity of the LHC was extracted, confirming the more detector-dependent estimates by CMS. 
 
 
 
@@ -167,7 +167,7 @@ The large lever arm between the near and the far units allows the determination 
 %--------------------------------------------------
 \section{LHC Optics}
 
-The measurement presented in this paper was performed with the $\beta^*=90\un{m}$ optics, which has been described in detail \cite{epl96}; here we repeat only the most important properties. An elastically scattered proton created at the vertex $(x^*, y^*, z^*=0)$ with the horizontal and vertical scattering angles $(\theta_x^*, \theta_y^*)$ is transported through the LHC magnet lattice and hits the Roman Pots at points $(x, y)$:
+The measurement presented in this article was performed with the $\beta^*=90\un{m}$ optics, which has been described in detail \cite{epl96}; here we repeat only the most important properties. A proton elastically scattered at the vertex $(x^*, y^*, z^*=0)$ with the horizontal and vertical scattering angles $(\theta_x^*, \theta_y^*)$ is transported through the LHC magnet lattice and traverses the Roman Pots at points $(x, y)$:
 \begin{equation}
 \label{eq:transport}
 \begin{array}{rcl}
@@ -197,7 +197,7 @@ The presented data were recorded in October 2011. For this analysis, only one co
 
 During the run three data sets were recorded with different RP distances to the beam center corresponding to minimum values of the four-momentum transfer squared between $(4.6$ and $7.3)\cdot10^{-3}\un{GeV^2}$. The different data sets enabled us to reduce certain systematic uncertainties (alignment, inefficiency corrections, etc.). A run summary is given in Tab.~\ref{tab:datasets}.
 
-The 1st-level trigger benefits from the 20 possible hits (10 planes in both near and far RP) per proton track and is based on a track segment in the near or the far unit. This redundancy guarantees a high trigger efficiency (over $99\%$ per proton). A coincidence between a proton on the left and the right side of the IP is requested in the typical elastic double-arm signature in the vertical RP detectors with two diagonals (left top -- right bottom or left bottom -- right top). The characteristics of the $\beta^* = 90\un{m}$ optics force most of the elastically scattered protons into the vertical RPs, see Fig.~\ref{fig:hit dist}.
+The 1st-level trigger benefits from the 20 possible hits (10 planes in both near and far RP) per proton track and is based on a track segment in the near or the far unit. This redundancy guarantees a high trigger efficiency (over $99\%$ per proton). A coincidence between a proton on the left and the right side of the IP is requested in the elastic double-arm signature in the vertical RP detectors with two diagonals (left top -- right bottom or left bottom -- right top). The characteristics of the $\beta^* = 90\un{m}$ optics force most of the elastically scattered protons into the vertical RPs, see Fig.~\ref{fig:hit dist}.
 
 \begin{table}
 \caption{Description of the three datasets available. The RP position gives the RP approach to beam in multiples of the beam size ($\sigma_{\rm beam}$). The third column summarizes the numbers of elastic events reconstructed from both diagonals. $\mathcal{L}_{\rm int}$ is the integrated
@@ -299,7 +299,7 @@ The DAQ inefficiency (dead time) was determined by comparing the numbers of trig
 
 Reconstruction inefficiencies occur due to: intrinsic RP detection inefficiency of each silicon sensor, proton interactions with the material of a RP and ``pile-up'' of several protons in one event (RPs can uniquely reconstruct only one track). For the last case, the most important contribution is a coincidence of an elastic proton and a beam-halo proton, see Fig.~\ref{fig:hit dist}.
 
-Uncorrelated inefficiencies of single RPs were studied by removing the examined RP from the selection cuts and counting the recuperated events. For this study, only cut 2 could be kept -- the others require both near and far RP measurements. The result was an inefficiency of $(1.5 \pm 0.2)\%$ for the near and $(3.0 \pm 0.2)\%$ for the far RPs. This difference can be explained by proton interactions in the near RP that affect the far RP too. This near-far correlated inefficiency was determined from data by counting events with corresponding shower signatures, yielding $(1.5\pm 0.7)\%$ (this result is confirmed by MC simulations).
+Uncorrelated inefficiencies of single RPs were studied by removing the examined RP from the selection cuts and counting the recovered events. For this study, only cut 2 could be kept -- the others require both near and far RP measurements. The result was an inefficiency of $(1.5 \pm 0.2)\%$ for the near and $(3.0 \pm 0.2)\%$ for the far RPs. This difference can be explained by proton interactions in the near RP that affect the far RP too. This near-far correlated inefficiency was determined from data by counting events with corresponding shower signatures, yielding $(1.5\pm 0.7)\%$ (this result is confirmed by MC simulations).
 
 The ``pile-up'' inefficiency was calculated from the probability of finding an additional track (on top of the elastic) in any station of a diagonal. This probability was determined from the zero-bias data stream and was found to increase as the RPs approached the beam. For instance, for the diagonal bottom-left top-right, the probabilities were $(3.9 \pm 0.3)\%$, $(6.2 \pm 0.3)\%$ and $(7.9 \pm 0.3)\%$ for the datasets 1, 2 and 3, respectively.
 
@@ -309,7 +309,7 @@ The ``pile-up'' inefficiency was calculated from the probability of finding an a
 \begin{center}
 \includegraphics{fig/hit_dist.pdf}
 \vskip-5mm
-\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{tab:cuts}). The left plot clearly indicates the presence of the beam halo, which is eliminated by the selection cuts (the right plot). The distribution of elastic hits in the right plot is sharply cut at about $|y| = 29\un{mm}$ as a consequence of the LHC aperture limitations. }
+\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{tab:cuts}). The left plot clearly shows the presence of the beam halo, which is eliminated by the selection cuts (the right plot). The distribution of elastic hits in the right plot is sharply cut at about $|y| = 29\un{mm}$ as a consequence of the LHC aperture limitations. }
 \label{fig:hit dist}
 \end{center}
 \end{figure*}
@@ -406,7 +406,7 @@ $0.4$	&	$12.3\%$	& $\cdot$	& $\cdot$ 	& $12.9\%$ \cr
 \begin{center}
 \includegraphics{fig/dsdt_comp.pdf}
 \vskip-5mm
-\caption{A compilation of the elastic differential cross-section measurements by TOTEM. Each measurement is shown in a different color. The embedded figure provides a zoom of the region used for extrapolation to $t=0$, showing the lowest $|t|$-values accessible in the analysis from Ref.~\cite{epl96} (green) and this analysis (red).}
+\caption{The elastic differential cross-section measurements by TOTEM. Each measurement is shown in a different color. The embedded figure provides a zoom of the region used for extrapolation to $t=0$, showing the lowest $|t|$-values accessible in the analysis from Ref.~\cite{epl96} (green) and this analysis (red).}
 \label{fig:dsdt}
 \end{center}
 \vskip-15mm\hbox{}
@@ -415,7 +415,7 @@ $0.4$	&	$12.3\%$	& $\cdot$	& $\cdot$ 	& $12.9\%$ \cr
 
 \def\TI{%
 \begin{largetable}
-\hbox{}\vskip-3mm
+\hbox{}\vskip-4mm
 \caption{The elastic differential cross-section determined in this analysis. Some details on the systematic uncertainty calculation can be found in Tab.~\ref{tab:systematics}, which can also be used to evaluate the correlations of the systematic uncertainties among the bins (the three contributions are independent).
 }
 \label{tab:data low t}
@@ -468,7 +468,7 @@ $0.0455\S$ & $204.8$ & $\S1.3$ & $\S8.7$ && $0.103\S$ & $\S65.53$ & $0.60$ & $2.
 
 \def\TII{%
 \begin{largetable}
-\hbox{}\vskip-3mm
+\hbox{}\vskip-4mm
 \caption{The elastic differential cross-section as given in \cite{epl95}. The systematic uncertainties are almost fully correlated among the bins.
 %systematic uncertainties evaluated for three $|t|$ values: $^{+25}_{-37}\%$ at $|t|=0.4\un{GeV^2}$, $^{+28}_{-39}\%$ at $0.5\un{GeV^2}$ and $^{+27}_{-30}\%$ at $1.5\un{GeV^2}$.
 }
@@ -545,17 +545,18 @@ $\sigma_{\rm inel}$			& $\unt{mb}$ & $73.15$ & & $\pm 0.77$ & $\pm 0.29$ & $\pm 
 
 \def\TB{%
 \begin{table*}
-\hbox{}\vskip-3mm
+\hbox{}\vskip-4mm
 \caption{Elastic slopes $B$ (in $\rm GeV^{-2}$) obtained from parameterization Eq.~(\ref{eq:extrapolation}) fitted through intervals $|t|_{\rm low}$ to $|t|_{\rm high}$.
 % The first uncertainty is statistical, the second systematic.
 }
 \label{tab:B}
 \small
 \begin{center}
-\vskip-2mm
-\setlength{\tabcolsep}{10pt}
-\begin{tabular}{lcc}\hline
-$|t|_{\rm low}\quad \backslash\quad \ |t|_{\rm high}$ & $0.1\un{GeV^2}$ & $0.2\un{GeV^2}$\cr\hline
+\vskip-3mm
+\setlength{\tabcolsep}{3pt}
+\begin{tabular}{c@{\hskip15pt}cc}\hline
+$|t|_{\rm low}$ & \multispan2\hfil $|t|_{\rm high}$\hfil\cr
+& $0.1\un{GeV^2}$ & $0.2\un{GeV^2}$\cr\hline
 $0.005\un{GeV^2}$ & $19.96 \pm 0.04^{\rm stat} \pm 0.22^{\rm syst}$ & $19.89 \pm 0.02^{\rm stat} \pm 0.27^{\rm syst}$ \cr
 $0.020\un{GeV^2}$ & $19.93 \pm 0.05^{\rm stat} \pm 0.21^{\rm syst}$ & $19.87 \pm 0.03^{\rm stat} \pm 0.33^{\rm syst}$\cr\hline
 \end{tabular}
@@ -603,7 +604,7 @@ The above measurements will be repeated this year at the higher energy of $\sqrt
 \acknowledgments
 \vskip-2mm
 
-We are indebted to the beam optics development team ({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~White}) for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank {\sc M.~Ferro-Luzzi} and the LHC machine coordinators for scheduling the dedicated fills.
+We are indebted to the beam optics development team ({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~M.~White}) for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank {\sc M.~Ferro-Luzzi} and the LHC machine coordinators for scheduling the dedicated fills.
 
 
 
