--- a/2012/3papers/elastic/elastic_epl.tex
+++ b/2012/3papers/elastic/elastic_epl.tex
@@ -1,4 +1,4 @@
-\documentclass[doublecol]{../macros/epl2} 
+\documentclass[doublecol]{epl/epl2} 
 % or \documentclass[page-classic]{epl2} for one column style
 
 \title{Measurement of proton-proton elastic scattering and total cross-section at $\sqrt s$ = 7\,TeV}
@@ -81,7 +81,7 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
  \and C.~Taylor\inst{9}
  \and N.~Turini\inst{7b}
  \and V.~Vacek\inst{1b}
- \and M.~Vitek\inst{1b}
+ \and M.~V\'itek\inst{1b}
  \and J.~Welti\inst{3a,3b}
  \and J.~Whitmore\inst{10}
 }
@@ -139,13 +139,15 @@ For model comparisons the $t$-distributions are tabulated including the large $|
 The study of elastic proton-proton scattering reveals many aspects about the structure of the proton, its shape and opacity, i.e.~matter density. It also tests the interplay of non-perturbative and perturbative regimes of $\rm pp$ interactions depending on the four-momentum transfer squared $t$ involved in the scattering process.
 % ($t = (p_{\rm i} - p_{\rm f})^2$ with $p_{\rm i,f}$  being the initial and final four-momentum, respectively). 
 
-In several runs with different beam optics, TOTEM has measured at the center-of-mass energy of $7\un{TeV}$ the differential elastic cross-section $\d\sigma/\d t$ over a wide range of $t$. The first measurement, reported by the TOTEM collaboration \cite{epl95}, covered the $|t|$-range from $0.36 \hbox{ to } 2.5\un{GeV^2}$. These data were taken with the standard 2010 LHC beam optics (with the betatron value at the intersection point $\beta^*$ of $3.5\un{m}$). The differential cross-section $\d\sigma/\d t$ exhibited an exponential decay at low $|t|$ followed by a significant diffractive minimum at $|t|=0.58\un{GeV^2}$ and at larger $|t|$-values a behavior compatible with the power law already observed at lower energies (see references 1 to 11 in \cite{epl95}).
+In several runs with different beam optics, TOTEM has measured at the center-of-mass energy of $7\un{TeV}$ the differential elastic cross-section $\d\sigma/\d t$ over a wide range of $t$. The first measurement, reported by the TOTEM collaboration \cite{epl95}, covered the $|t|$-range from $0.36 \hbox{ to } 2.5\un{GeV^2}$. These data were taken with the standard 2010 LHC beam optics (with the betatron value at the intersection point $\beta^*$ of $3.5\un{m}$). The differential cross-section $\d\sigma/\d t$ exhibited an exponential decay at low $|t|$ followed by a significant diffractive minimum
+%at $|t|=0.58\un{GeV^2}$
+and at larger $|t|$-values a behavior compatible with the power law already observed at lower energies (see references 1 to 11 in \cite{epl95}).
 
 To access smaller $|t|$-values (at $\sqrt s = 7\un{TeV}$ $|t| = 0.01\un{GeV^2}$ corresponds to a scattering angle of $\approx 29\un{\mu rad}$) the colliding beams must have a beam divergence of a few micro-radians. This can be obtained by either increasing the betatron value $\beta^*$ or by reducing the beam emittance $\epsilon$ (beam divergence $=\sqrt{\epsilon/\beta^*}$). With a dedicated beam optics configuration ($\beta^* = 90\un{m}$), TOTEM extended the measurement to $|t|$-values as low as $2\cdot10^{-2}\un{GeV^2}$ \cite{epl96}. This made the extrapolation of the differential cross-section to the optical point at $t=0$ possible and enabled, for the first time at the LHC, the determination of the elastic scattering cross-section as well as the total cross-section via the optical theorem.
 
-This article presents an improved $t$-distribution measurement with higher statistics and reaching even smaller $|t|$-values using different data sets taken in October 2011, with several special runs at $\beta^* = 90\un{m}$. This time, the detectors, housed in Roman Pots (RP), were put very close to the beam center: $4.8 \hbox{ to } 6.5$ times the transverse beam size $\sigma_{\rm beam}$. This was possible since the beams were scraped by the LHC collimators at a distance of $4\,\sigma_{\rm beam}$ for RP alignment purposes. For the definition of their position, each Roman Pot was brought to touch this sharp beam edge. After retraction by $0.5$ to $2\,\sigma_{\rm beam}$, TOTEM took data in very clean conditions with only a few colliding bunch pairs and reached $|t|$ values down to $5\cdot10^{-3}\un{GeV^2}$, enabling the observation of $91\%$ of the elastic cross-section -- compared to only $67\%$ previously \cite{epl96}. By extrapolating the differential elastic cross-section to the optical point $t=0$ and using the optical theorem, the total and inelastic cross-sections were also derived. The differential cross-section over the complete $t$-range combining all available measurements with its statistical and systematic uncertainties is tabulated in this article.
+This article presents an improved $t$-distribution measurement with higher statistics and a reach to even smaller $|t|$-values using different data sets taken in October 2011, with several special runs at $\beta^* = 90\un{m}$. This time, the detectors, housed in Roman Pots (RP), were put very close to the beam center: $4.8 \hbox{ to } 6.5$ times the transverse beam size $\sigma_{\rm beam}$. This was possible since the beams were scraped by the LHC collimators at a distance of $4\,\sigma_{\rm beam}$ for RP alignment purposes. For the definition of their position, each Roman Pot was brought to touch this sharp beam edge. After retraction by $0.5$ to $2\,\sigma_{\rm beam}$, TOTEM took data in very clean conditions with only a few colliding bunch pairs and reached $|t|$ values down to $5\cdot10^{-3}\un{GeV^2}$, enabling the observation of $91\%$ of the elastic cross-section -- compared to only $67\%$ previously \cite{epl96}. By extrapolating the differential elastic cross-section to the optical point $t=0$ and using the optical theorem, the total and inelastic cross-sections were also derived. The differential cross-section over the complete $t$-range combining all available measurements with its statistical and systematic uncertainties is tabulated in this article.
 
-In the same journal issue, a direct inelastic cross-section measurement, based on triggers from the forward inelastic detectors, is reported \cite{P2}. This is compared to the inelastic cross-section obtained from elastic scattering via the optical theorem, yielding a cross-section estimate for single diffraction at masses below $3\un{GeV}$ that escape our detection. Another article \cite{P3} summarizes the cross-sections obtained with different approaches, including the luminosity independent method. Since the $\rho$ parameter (the ratio of the real to imaginary part of the hadronic scattering amplitude at $t=0$) does not enter in the method from Ref.~\cite{P2}, $\rho$ can be determined by comparing the results from the different methods. Furthermore, the luminosity of the LHC was extracted, confirming the more detector-dependent estimates by CMS. 
+In the same journal issue, a direct inelastic cross-section measurement, based on triggers from the forward inelastic detectors, is reported \cite{P2}. This is compared to the inelastic cross-section obtained from elastic scattering via the optical theorem, yielding a cross-section estimate for single diffraction at masses below $3.4\un{GeV}$ that escape our detection. Another article \cite{P3} summarizes the cross-sections obtained with different approaches, including the luminosity independent method. Since the $\rho$ parameter (the ratio of the real to imaginary part of the hadronic scattering amplitude at $t=0$) does not enter in the method from Ref.~\cite{P2}, $\rho$ can be determined by comparing the results from the different methods. Furthermore, the luminosity of the LHC was extracted, confirming the more detector-dependent estimates by CMS. 
 
 
 
@@ -154,7 +156,7 @@ In the same journal issue, a direct inelastic cross-section measurement, based o
 
 The configuration of the TOTEM Roman Pot system and the silicon detector properties have already been described in detail \cite{jinst,epl95,epl96}. For the understanding of the analysis, a few basic  system  properties are repeated. 
 
-The silicon sensors are placed in movable beam-pipe insertions -- Roman Pots -- located symmetrically on either side of the LHC interaction point (IP) 5 at distances of $215$ -- $220\un{m}$ from the IP.
+The silicon sensors are placed in movable beam-pipe insertions -- Roman Pots -- located symmetrically on both sides of the LHC interaction point (IP) 5 at distances of $215$ -- $220\un{m}$ from the IP.
 
 Each RP station is composed of two units (near and far) separated by a distance of about $5\un{m}$. A unit consists of 3 RPs, two approaching the outgoing beam vertically from the top and the bottom and one horizontally. Each RP is equipped with a stack of 10 silicon strip detectors measuring the proton distance to the beam center in both coordinates perpendicular to the beam with a precision of about $11\un{\mu m}$.
 %The RPs are moved from the garage position towards the beam center with a precision of $20\un{\mu m}$.
@@ -173,10 +175,10 @@ The measurement presented in this article was performed with the $\beta^*=90\un{
 \begin{array}{rcl}
 x = L_x\,\theta^*_x + v_x\,x^*\ &,\quad& y = L_y\,\theta^*_y + v_y\,y^* \\
 L_x = 2.9\un{m} \hbox{ (near)}&,\quad& L_y = 240\un{m} \hbox{ (near)}\\
-L_x \approx 0\un{m} \hbox{ (far)}&,\quad& L_y = 260\un{m}\hbox{ (far)}\\
+L_x \approx 0\un{m} \hbox{ (far)}&,\quad& L_y = 260\un{m}\hbox{ (far)}\ .\\
 \end{array}
 \end{equation}
-Since $L_x \approx 0$ in the far RP, the corresponding horizontal hit position $x^{\rm F}$ can be used for vertex $x^*$ determination:
+Since $L_x \approx 0$ in the far RP, the corresponding horizontal hit position $x^{\rm F}$ can be used for the vertex $x^*$ determination:
 \begin{equation}
 \label{eq:vertex reconstruction}
 x^* = {x^{\rm F}\over v_x}\ .
@@ -195,13 +197,13 @@ where $s$ denotes the distance from the interaction point.
 
 The presented data were recorded in October 2011. For this analysis, only one colliding bunch-pair was used with an average proton population of $6\cdot10^{10}$ protons/bunch producing an instantaneous luminosity of $6\un{mb^{-1}\, s^{-1}}$ and an average inelastic-interaction rate of $0.03$ per bunch crossing.
 
-During the run three data sets were recorded with different RP distances to the beam center corresponding to minimum values of the four-momentum transfer squared between $(4.6$ and $7.3)\cdot10^{-3}\un{GeV^2}$. The different data sets enabled us to reduce certain systematic uncertainties (alignment, inefficiency corrections, etc.). A run summary is given in Tab.~\ref{tab:datasets}.
+During the run three data sets were recorded with different RP distances to the beam center corresponding to minimum values of the four-momentum transfer squared between $(4.6$ and $7.3)\cdot10^{-3}\un{GeV^2}$. The different data sets enabled to reduce certain systematic uncertainties (alignment, inefficiency corrections, etc.). A run summary is given in Tab.~\ref{tab:datasets}.
 
-The 1st-level trigger benefits from the 20 possible hits (10 planes in both near and far RP) per proton track and is based on a track segment in the near or the far unit. This redundancy guarantees a high trigger efficiency (over $99\%$ per proton). A coincidence between a proton on the left and the right side of the IP is requested in the elastic double-arm signature in the vertical RP detectors with two diagonals (left top -- right bottom or left bottom -- right top). The characteristics of the $\beta^* = 90\un{m}$ optics force most of the elastically scattered protons into the vertical RPs, see Fig.~\ref{fig:hit dist}.
+The first-level trigger benefits from the 20 possible hits (10 planes in both near and far RP) per proton track and is based on a track segment in the near or the far unit. This redundancy guarantees a high trigger efficiency (over $99\%$ per proton). A coincidence between a proton on the left and the right side of the IP is requested in the elastic double-arm signature in the vertical RP detectors with two diagonals (left top -- right bottom or left bottom -- right top). The characteristics of the $\beta^* = 90\un{m}$ optics force most of the elastically scattered protons into the vertical RPs, see Fig.~\ref{fig:hit dist}.
 
 \begin{table}
-\caption{Description of the three datasets available. The RP position gives the RP approach to beam in multiples of the beam size ($\sigma_{\rm beam}$). The third column summarizes the numbers of elastic events reconstructed from both diagonals. $\mathcal{L}_{\rm int}$ is the integrated
-luminosity for each dataset, taking into account the DAQ inefficiency. The last column shows the lowest $|t|$ values reached.}
+\caption{Description of the three datasets available. The RP position gives the RP approach to the beam in multiples of the beam size ($\sigma_{\rm beam}$). The third column summarizes the numbers of elastic events reconstructed from both diagonals. $\mathcal{L}_{\rm int}$ is the integrated
+luminosity for each dataset, accounting for the data-acquisition (DAQ) inefficiency. The last column shows the lowest $|t|$ values reached.}
 \label{tab:datasets}
 \begin{center}
 \vskip-3mm
@@ -209,7 +211,7 @@ luminosity for each dataset, taking into account the DAQ inefficiency. The last 
 & RP & elastic                   & $\mathcal{L}_{\rm int}$ & $|t|_{\rm min}$     \cr
 \omit\hss\vbox to 0pt{\vss\hbox{\ dataset\ }\vss}\hss &\multispan4 \cr
  &  position &  events                   & $\unt{\mu b^{-1}}$         & $\unt{GeV^2}$       \cr\hline
-1 & $6.5\,\sigma_{\rm beam}$ & 841k      & $68.2$                  & $7.3\cdot10^{-3}$ \cr
+1 & $6.5\,\sigma_{\rm beam}$ & 841k      & $68.0$                  & $7.3\cdot10^{-3}$ \cr
 2 & $5.5\,\sigma_{\rm beam}$ & 106k      & $8.2$                   & $5.7\cdot10^{-3}$ \cr
 3 & $4.8\,\sigma_{\rm beam}$ & 89k       & $6.6$                   & $4.6\cdot10^{-3}$ \cr\hline
 \end{tabular}
@@ -220,13 +222,13 @@ luminosity for each dataset, taking into account the DAQ inefficiency. The last 
 %--------------------------------------------------
 \section{Analysis}
 
-The analysis is very similar to the previous one \cite{epl96}. Here, we take advantage of having three datasets (each with two diagonals) analyzed separately, thus leading to a better control over the systematics.
+The analysis is very similar to the previous one \cite{epl96}. Here, advantage was taken of having three datasets (each with two diagonals) analyzed separately, thus leading to a better control over the systematics.
 
 
 %-------------------------
 \subsection{Alignment}
 
-Three complementary methods were applied \cite{jan_thesis}. First, the RP position was roughly determined from the beam-based alignment \cite{mario_ipac_2011}. Second, proton tracks passing through the overlap between vertical and horizontal RPs were used to determine the relative alignment among the RPs of each unit. Third, since the elastic event tagging does not require precise alignment, an alignment fine-tuning was performed on a sample obtained from an elastic pre-selection (see next paragraph). By exploiting the azimuthal symmetry of elastic scattering%
+Three complementary methods were applied \cite{jan_thesis}. First, the RP position was approximately given by the beam-based alignment \cite{mario_ipac_2011}. Second, proton tracks passing through the overlap between the vertical and horizontal RPs were used to determine the relative alignment of the RPs of each unit. Third, since the elastic event tagging does not require a precise alignment, an alignment fine-tuning was performed on a sample obtained from a pre-selection of elastic events (see next paragraph). By exploiting the azimuthal symmetry of elastic scattering%
 %and taking advantage of the very small effective length $L_x$
 , the horizontal and vertical shifts and the tilt of each unit could be adjusted. The effect of residual misalignments on $\d\sigma_{\rm el}/\d t$ was thus smaller than $0.3\%$ for every $t$-bin.
 
@@ -239,7 +241,7 @@ Cuts 3 and 4: if $\xi\neq 0$, the vertex reconstruction in Eq.~(\ref{eq:vertex r
 Cuts 5 and 6: if $\xi\neq 0$, the correlation between the track position ($y^{\rm N}$) and the track angle (proportional to $y^{\rm F} - y^{\rm N}$) is lost. Cut 7 compares the horizontal vertex position reconstructed from the left and right arms. It is the strongest single cut and is very effective against the beam-halo background, see Fig.~\ref{fig:hit dist}.
 
 \begin{table}
-\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm, the N and F corresponds to the near and far units. The constant $\alpha = L_y^{\rm F} / L_y^{\rm N} - 1 \approx 0.11$. The right-most column gives the RMS of the cut distribution ($\equiv 1\sigma$), all cuts are applied at $3\sigma$-level.
+\caption{The elastic selection cuts. The superscripts R and L refer to the right and left arm, the N and F corresponds to the near and far units. The constant $\alpha = L_y^{\rm F} / L_y^{\rm N} - 1 \approx 0.11$. The right-most column gives the RMS of the cut distribution ($\equiv 1\sigma$), all the cuts are applied at $3\sigma$-level.
 }
 \label{tab:cuts}
 \begin{center}
@@ -271,13 +273,13 @@ For elastic events, the angles reconstructed from left and right arms were avera
 %-------------------------
 \subsection{Background}
 
-The background contribution (i.e.~all non-elastic events passing the selection cuts) was estimated by omitting the strongest single cut (number 7 in Tab.~\ref{tab:cuts}) and analyzing the distribution of $x^{*\rm R} - x^{*\rm L}$. This distribution can be reasonably described by two Gaussians -- one for the signal and one for the background. By interpolating the background tails ($|\Delta x^*| > 3\sigma$) into the signal region ($|\Delta x^*| < 3\sigma$), the background/signal ratio was determined as $(0.8 \pm 0.4)\%$.
+The background contribution (i.e.~all non-elastic events passing the selection cuts) was estimated by omitting the strongest single cut (number 7 in Tab.~\ref{tab:cuts}) and by analyzing the distribution of $x^{*\rm R} - x^{*\rm L}$. This distribution can be reasonably described by two Gaussians -- one for the signal and one for the background. By interpolating the background tails ($|\Delta x^*| > 3\sigma$) into the signal region ($|\Delta x^*| < 3\sigma$), the background/signal ratio was determined as $(0.8 \pm 0.4)\%$.
 
 
 %-------------------------
 \subsection{Acceptance correction}
 
-We identified two acceptance limitations: the detector edge (relevant for low $|t|$) and the LHC aperture limitation shown in Fig.~\ref{fig:hit dist} right (relevant for high $|t|$). Both effects were treated by assuming azimuthal symmetry of the elastic scattering and by correcting for smearing around the limitation edges. In order to keep the uncertainty at a reasonable level, we constrained ourselves to the region where the full acceptance correction was not larger than a factor $7.5$%
+Two acceptance limitations were identified: the detector edge (relevant for low $|t|$) and the LHC aperture limitation shown in Fig.~\ref{fig:hit dist} right (relevant for high $|t|$). Both effects were treated by assuming azimuthal symmetry of the elastic scattering and by correcting for smearing around the limitation edges. In order to keep the uncertainty at a reasonable level, the analysis was constrained into the region where the full acceptance correction was not larger than a factor $7.5$%
 %(considering both diagonals)
 .
 
@@ -285,21 +287,21 @@ We identified two acceptance limitations: the detector edge (relevant for low $|
 %-------------------------
 \subsection{Unfolding of resolution effects}
 
-The angular resolution was determined by comparing the scattering angles reconstructed from the left and right arm. Combining all three datasets and all diagonals yields one-arm resolutions of $(6.36\pm 0.21)\un{\mu rad}$ in $\theta^*_x$ and $(2.47\pm 0.07)\un{\mu rad}$ in $\theta^*_y$. The latter is predominantly given by the beam-divergence, whereas the $\theta^*_x$ resolution is deteriorated by a contribution from the finite detector pitch.
+The angular resolution was determined by comparing the scattering angles reconstructed from the left and right arm. Combining all the three datasets and all the diagonals yields one-arm resolutions of $(6.36\pm 0.21)\un{\mu rad}$ in $\theta^*_x$ and $(2.47\pm 0.07)\un{\mu rad}$ in $\theta^*_y$. The latter is predominantly due to the beam-divergence, whereas the $\theta^*_x$ resolution is deteriorated by a contribution from the finite detector pitch.
 
 The $t$-resolution impact on $\d\sigma_{\rm el}/\d t$  was determined (and eliminated) by an iterative procedure, that starts by taking the observed (smeared) $t$-distribution as an input to a Monte-Carlo calculation of the un-smearing correction. The correction is applied to the observed $t$-distribution and yields a better estimate of the true $t$-distribution. These two steps were repeated three times to reach convergence. The systematic uncertainty of this procedure (due to the uncertainty of the $\theta^*_{x, y}$ resolution) was estimated to be smaller than $0.5\%$.
 
 %-------------------------
 \subsection{Efficiencies}
 
-The efficiency of the RP trigger was estimated using the zero-bias data stream. We repeated the elastic event selection on these data and found the RP trigger efficient for all the selected events. Therefore, at $68\%$ confidence level, we concluded the trigger efficiency to be higher than $99.8\%$.
+The efficiency of the RP trigger was estimated by using the zero-bias data stream. The selection of elastic events was repeated for these data and the RP trigger was found efficient for all the selected events. Therefore, at $68\%$ confidence level, it was concluded that the trigger efficiency was higher than $99.8\%$.
 % 95% CL: 99.40
 
 The DAQ inefficiency (dead time) was determined by comparing the numbers of triggered and recorded events, yielding $(1.858 \pm 0.001)\%$.
 
 Reconstruction inefficiencies occur due to: intrinsic RP detection inefficiency of each silicon sensor, proton interactions with the material of a RP and ``pile-up'' of several protons in one event (RPs can uniquely reconstruct only one track). For the last case, the most important contribution is a coincidence of an elastic proton and a beam-halo proton, see Fig.~\ref{fig:hit dist}.
 
-Uncorrelated inefficiencies of single RPs were studied by removing the examined RP from the selection cuts and counting the recovered events. For this study, only cut 2 could be kept -- the others require both near and far RP measurements. The result was an inefficiency of $(1.5 \pm 0.2)\%$ for the near and $(3.0 \pm 0.2)\%$ for the far RPs. This difference can be explained by proton interactions in the near RP that affect the far RP too. This near-far correlated inefficiency was determined from data by counting events with corresponding shower signatures, yielding $(1.5\pm 0.7)\%$ (this result is confirmed by MC simulations).
+Uncorrelated inefficiencies of separate RPs were studied by removing the RP in question from the selection cuts and counting the recovered events. For this study, only cut 2 could be kept -- the others require both near and far RP measurements. The result was an inefficiency of $(1.5 \pm 0.2)\%$ for the near and $(3.0 \pm 0.2)\%$ for the far RPs. This difference can be explained by the proton interactions in the near RP that affect the far RP too. This near-far correlated inefficiency was determined from data by counting events with corresponding shower signatures, yielding $(1.5\pm 0.7)\%$ (this result is confirmed by MC simulations).
 
 The ``pile-up'' inefficiency was calculated from the probability of finding an additional track (on top of the elastic) in any station of a diagonal. This probability was determined from the zero-bias data stream and was found to increase as the RPs approached the beam. For instance, for the diagonal bottom-left top-right, the probabilities were $(3.9 \pm 0.3)\%$, $(6.2 \pm 0.3)\%$ and $(7.9 \pm 0.3)\%$ for the datasets 1, 2 and 3, respectively.
 
@@ -309,7 +311,7 @@ The ``pile-up'' inefficiency was calculated from the probability of finding an a
 \begin{center}
 \includegraphics{fig/hit_dist.pdf}
 \vskip-5mm
-\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{tab:cuts}). The left plot clearly shows the presence of the beam halo, which is eliminated by the selection cuts (the right plot). The distribution of elastic hits in the right plot is sharply cut at about $|y| = 29\un{mm}$ as a consequence of the LHC aperture limitations. }
+\caption{Hit distributions from dataset 3 in the far unit of the $220\un{m}$ station, right arm. Left: with diagonal cut only, Right: with all the elastic selection cuts (see Tab.~\ref{tab:cuts}). The left plot clearly shows the presence of a beam halo, which is eliminated by the selection cuts (the right plot). The distribution of elastic hits in the right plot is sharply cut at about $|y| = 29\un{mm}$ as a consequence of the LHC aperture limitations. }
 \label{fig:hit dist}
 \end{center}
 \end{figure*}
@@ -317,24 +319,11 @@ The ``pile-up'' inefficiency was calculated from the probability of finding an a
 %-------------------------
 \subsection{Luminosity}
 
-In this paper, we use the luminosity measured by CMS with a $4\%$-uncertainty estimate%
+In this paper, the luminosity measured by CMS (with a $4\%$-uncertainty estimate) was used.
 %(no dedicated low-luminosity performance studies have been performed)
-. Luminosity-independent results are given elsewhere \cite{P3}.
+Luminosity-independent results are given elsewhere \cite{P3}.
 
-% Ken's pedestal subtraction
 
-\subsection{Extrapolation to $t=0$}
-
-The elastic differential cross-section was extrapolated to zero with the following parameterization:
-\begin{equation}
-\label{eq:extrapolation}
-{\d\sigma_{\rm el}\over \d t} = \left. {\d\sigma_{\rm el}\over \d t}\right|_{t=0} \ \e^{-B|t|}\ .
-\end{equation}
-The fits were performed from the lowest accessible $|t|$ values (see $|t|_{\rm min}$ in Tab.~\ref{tab:datasets}) to $|t| = 0.2\un{GeV^2}$, with a typical $\chi^2/\hbox{n.d.f.}$ of $1.2$ -- see for example the black line in the embedded plot in Fig.~\ref{fig:dsdt}.
-
-The above parameterization is justified by the fact that the observed $|t|$-distribution is well described with a single value of the slope $B$, see Tab.~\ref{tab:B}. This means that the effects of the Coulomb-hadronic interference \cite{kklp} are smaller (in the fit range) than our experimental resolution. Therefore, within the uncertainties, the above extrapolation can be attributed to the hadronic component of the scattering amplitude and thus used in the optical theorem to calculate the total cross-section as in Eq.~(\ref{eq:si tot}).
-
-% two B definitions
 
 %-------------------------
 \section{Systematic uncertainty calculation}
@@ -345,6 +334,24 @@ For each of the analysis steps above, the systematic uncertainty effect on $\d\s
 
 The luminosity uncertainty is the leading systematic effect for $|t| < 0.2\un{GeV^2}$, above that point it is the uncertainty of $\d L_x/\d s$. The optics-related error contribution is almost vanishing around $|t| = 0.06\un{GeV^2}$ and has opposite signs below and above that point. Therefore there is a partial error cancellation in the integrated elastic cross-section $\sigma_{\rm el}$, and consequently the relative error of $\sigma_{\rm el}$ is significantly lower than the one of $\d\sigma_{\rm el}/\d t|_0$ -- see Tab.~\ref{tab:results}. Moreover, there is a strong correlation between the errors of $\sigma_{\rm el}$ and $\d\sigma_{\rm el}/\d t|_0$ -- the correlation coefficient is $0.76$.
 % (when both $t$-dependent and normalization contributions are included).
+
+
+
+%-------------------------
+\section{Extrapolation to $t=0$}
+
+The measured differential cross-section can be well ($\chi^2/\hbox{n.d.f.} \approx 1.2$) described with the parameterization
+\begin{equation}
+\label{eq:extrapolation}
+{\d\sigma_{\rm el}\over \d t} = \left. {\d\sigma_{\rm el}\over \d t}\right|_{t=0} \ \e^{-B|t|}
+\end{equation}
+over a large $|t|$-range, see Tab.~\ref{tab:B} and the black line
+%in the embedded plot
+in Fig.~\ref{fig:dsdt}. Since the slope $B$ remains constant even for the lowest $|t|$ values, one may conclude that
+%in the fit range
+the effects of the Coulomb-hadronic interference (for details see e.g.~\cite{kklp}) are smaller than our experimental sensitivity. Therefore, within the uncertainties, the fit can be attributed to the hadronic component of the scattering amplitude. Furthermore, it is assumed that Eq.~(\ref{eq:extrapolation}) describes the hadronic cross-section also for $|t|$ values below our acceptance and thus the fit can be used in the optical theorem to calculate the total cross-section according to Eq.~(\ref{eq:si tot}).
+
+
 
 
 \begin{table*}
@@ -594,26 +601,25 @@ For the $\rho$ parameter the COMPETE \cite{compete} preferred-model extrapolatio
 %--------------------------------------------------
 \section{Outlook}
 
-The above measurements will be repeated this year at the higher energy of $\sqrt s = 8\un{TeV}$. Furthermore, in the spirit of the $90\un{m}$ optics, a larger $\beta^*$ optics ($\beta^* = 500$ to $1000\un{m}$) is presently under development. If still used this year at the energy of $\sqrt s = 8\un{TeV}$, minimum reachable $|t|$-values around  $5\cdot 10^{-4}\un{GeV^2}$ (where Coulomb and hadronic contributions to the differential cross-sections are about equal) will allow the study of the Coulomb-hadronic interference and consequently the determination of the $\rho$ parameter. Likewise, measurements of large $|t|$ elastic scattering are under study. Such measurements might reveal further diffractive minima as predicted by some phenomenological models.
+The above measurements will be repeated this year at the energy of $\sqrt s = 8\un{TeV}$. Furthermore, in the spirit of the $90\un{m}$ optics, a larger $\beta^*$ optics ($\beta^* = 500$ to $1000\un{m}$) is presently under development. With such an optics at the energy of $\sqrt s = 8\un{TeV}$, minimum reachable $|t|$-values around  $5\cdot 10^{-4}\un{GeV^2}$ (where Coulomb and hadronic contributions to the differential cross-sections are about equal) will allow the study of the Coulomb-hadronic interference and consequently the determination of the $\rho$ parameter. Likewise, measurements of large $|t|$ elastic scattering are under study. Such measurements might reveal further diffractive minima as predicted by some phenomenological models.
 %Cross-section measurements that are either $\rho$ or luminosity independent are the subject of the following papers.
 
 
 
 %--------------------------------------------------
-\vskip-2mm
 \acknowledgments
-\vskip-2mm
 
-We are indebted to the beam optics development team ({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~M.~White}) for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank {\sc M.~Ferro-Luzzi} and the LHC machine coordinators for scheduling the dedicated fills.
+We are indebted to the beam optics development team
+%({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~M.~White})
+for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank
+%{\sc M.~Ferro-Luzzi}
+and the LHC machine coordinators for scheduling the dedicated fills.
 
+We are grateful to CMS for providing their luminosity measurements.
 
 
 %--------------------------------------------------
-\vskip-2mm
-\begin{thebibliography}{0}
-
-% initials after
-% TODO: sort the papers as they appear in text
+\begin{thebibliography}{99}
 
 \bibitem{epl95}
     %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
