file for EPL style
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6447 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/combined/combined_epl.tex
+++ b/2012/3papers/combined/combined_epl.tex
@@ -1,5 +1,4 @@
-\documentclass[doublecol]{../macros/epl2} 
-% or \documentclass[page-classic]{epl2} for one column style
+\documentclass[doublecol]{epl/epl2} 
 
 \title{Luminosity independent measurements of total, elastic and inelastic cross-sections at $\sqrt s$ = 7\,TeV}
 %\shorttitle{Title} %Insert here a short version of the title if it exceeds 70 characters
@@ -81,7 +80,7 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
  \and C.~Taylor\inst{9}
  \and N.~Turini\inst{7b}
  \and V.~Vacek\inst{1b}
- \and M.~Vitek\inst{1b}
+ \and M.~V\'itek\inst{1b}
  \and J.~Welti\inst{3a,3b}
  \and J.~Whitmore\inst{10}
 }
@@ -103,7 +102,7 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \inst{7b}{Universit\`{a} degli Studi di Siena and Gruppo Collegato INFN di Siena, Italy.}\\
 \inst{8} {CERN, Geneva, Switzerland.}\\
 \inst{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}\\
-\inst{10}{Penn State University, Dept. of Physics, University Park, PA, USA.}\\
+\inst{10}{Penn State University, Dept.~of Physics, University Park, PA, USA.}\\
 }
 
 \pacs{13.60.Hb}{Total and inclusive cross sections (including deep-inelastic processes)}
