--- a/2012/3papers/elastic/elastic_cern.tex
+++ b/2012/3papers/elastic/elastic_cern.tex
@@ -31,8 +31,8 @@
 
 \renewcommand{\EXPLOGO}{fig/logo_totem_black.pdf}
 
-\PHnumber{2012-TODO}
-\PHdate{TODO}
+\PHnumber{2012-239}
+\PHdate{17 August 2012}
 
 \EXPnumber{TOTEM 2012-002}
 \EXPdate{14 August 2012}
@@ -632,7 +632,7 @@ We are indebted to the beam optics development team
 %({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~M.~White})
 for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank
 %{\sc M.~Ferro-Luzzi}
-and the LHC machine coordinators for scheduling the dedicated fills.
+the LHC machine coordinators for scheduling the dedicated fills.
 
 We are grateful to CMS for providing their luminosity measurements.
 
