--- a/2012/3papers/elastic/elastic_epl.tex
+++ b/2012/3papers/elastic/elastic_epl.tex
@@ -613,7 +613,7 @@ We are indebted to the beam optics development team
 %({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~M.~White})
 for the design, the thorough preparations and the successful commissioning of the $\beta^* = 90\un{m}$ optics. We congratulate the CERN accelerator groups for the very smooth operation in 2011. We thank
 %{\sc M.~Ferro-Luzzi}
-and the LHC machine coordinators for scheduling the dedicated fills.
+the LHC machine coordinators for scheduling the dedicated fills.
 
 We are grateful to CMS for providing their luminosity measurements.
 
